# Augmented-Insanity

./: .cmake-format.py  .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MODIFICATIONS.md  README.md  agent.md  build.gradle  flake.nix  settings.gradle  temprandomcommand.bash  xr-deps-versions.json
module-example/augins-head-sway/: CMakeLists.txt  README.md  build.gradle  head_sway.cpp  metadata.json
samples/augins-arcore-headpose/: CMakeLists.txt  LICENSE-arcore  arcore_module.cpp  build.gradle  metadata.json
samples/augins-test-locate-space/: CMakeLists.txt  build.gradle  locate_space_module.cpp  metadata.json
samples/augins-test-noop/: CMakeLists.txt  build.gradle  metadata.json  noop_module.cpp
src/xrt/: CMakeLists.txt
src/xrt/augins/: CMakeLists.txt  adapters.cpp  adapters.h  augins_dispatch.cpp  augins_dispatch.h  augins_extensions.cpp  augins_extensions.h  augins_hand_tracker_dispatch.h  augins_host_api.cpp  augins_host_api.h  augins_lifecycle.cpp  augins_lifecycle.h  augins_module_abi.h  augins_stub_xdevs.cpp  augins_stub_xdevs.h  dispatch.cpp  dispatch.h  extract.cpp  extract.h  host_api.cpp  host_api.h  lifecycle.cpp  lifecycle.h  loader.cpp  loader.h  manifest.cpp  manifest.h  module_abi.h
src/xrt/auxiliary/: CMakeLists.txt
src/xrt/auxiliary/android/: android_globals.cpp  android_globals.h
src/xrt/auxiliary/bindings/: bindings.json  bindings.json.license  bindings.py
src/xrt/auxiliary/d3d/: CMakeLists.txt  d3d_convertible_luid.hpp  d3d_winrt_helpers.cpp  d3d_winrt_helpers.hpp
src/xrt/auxiliary/glue/: CMakeLists.txt  g_catch_guard.hpp  g_device.hpp
src/xrt/auxiliary/htc/: CMakeLists.txt  htc_config.cpp  htc_config.h
src/xrt/auxiliary/math/: m_api.h  m_base.cpp
src/xrt/auxiliary/os/: CMakeLists.txt  os_serial.h  os_serial_linux.c  os_serial_stubs.c  os_threading.h  os_time.h
src/xrt/auxiliary/tracking/: t_dead_reckoning.c  t_dead_reckoning.h  t_euroc_recorder.cpp  t_tracker_slam.cpp  t_tracking.h
src/xrt/auxiliary/util/: CMakeLists.txt  u_builder_helpers.c  u_builder_helpers.h  u_builder_search.c  u_builder_search.h  u_cobs.c  u_cobs.h  u_debug.c  u_debug_gui.c  u_debug_gui.h  u_device_ni.c  u_device_ni.h  u_distortion_mesh.h  u_extension_list.cpp  u_extension_list.h  u_extension_list.hpp  u_file.c  u_file.cpp  u_handles.c  u_logging.c  u_logging.h  u_native_images.h  u_native_images_debug.h  u_pacing_app.c  u_pretty_print.c  u_pretty_print.h  u_prober.c  u_resampler.c  u_sink.h  u_sink_blob_visualizer.c  u_system_helpers.c  u_system_helpers.h  u_time.cpp  u_trace_marker.h  u_truncate_printf.h  u_var.h  u_wait.h  u_weak_ptr.hpp  u_windows.c  u_worker.c  (+1 more)
src/xrt/auxiliary/vive/: vive_builder.c  vive_calibration.c  vive_config.c  vive_config.h
src/xrt/auxiliary/vk/: CMakeLists.txt  vk_bundle_init.c  vk_compositor_flags.c  vk_enumerate.c  vk_extensions_helpers.c  vk_extensions_helpers.h  vk_function_loaders.c  vk_generate_inc_files.py  vk_helpers.c  vk_helpers.h  vk_image_allocator.c  vk_image_readback_to_xf_pool.h  vk_print.c  vk_queue_builder.c  vk_queue_builder.h  vk_queue_family.c  vk_queue_family.h  vk_submit_helpers.c  vk_submit_helpers.h  vk_time.c
src/xrt/base/: CMakeLists.txt  b_documentation.h  b_session.c  b_session.h  b_space_overseer.c  b_space_overseer.h  b_system.c  b_system.h  b_system_devices.c  b_system_devices.h
src/xrt/compositor/: CMakeLists.txt
src/xrt/compositor/client/: CMakeLists.txt  comp_d3d12_client.cpp  comp_gl_eglimage_swapchain.c  comp_gl_memobj_swapchain.c
src/xrt/compositor/main/: CMakeLists.txt  comp_compositor.c  comp_compositor.h  comp_mirror_to_debug_gui.c  comp_renderer.c  comp_settings.c  comp_target.h  comp_target_swapchain.c  comp_window.h  comp_window_debug_image.c  comp_window_mswin.c  comp_window_peek.c  comp_window_peek.h
src/xrt/compositor/mock/: CMakeLists.txt
src/xrt/compositor/multi/: CMakeLists.txt  comp_multi_compositor.c  comp_multi_interface.h  comp_multi_private.h  comp_multi_system.c
src/xrt/compositor/null/: CMakeLists.txt  null_compositor.c  null_compositor.h
src/xrt/compositor/render/: CMakeLists.txt  render_gfx.c  render_interface.h  render_resources.c
src/xrt/compositor/shaders/: CMakeLists.txt  hsv.inc.glsl  layer.comp  layer_defines.inc.glsl  render_shaders.c  render_shaders_interface.h  srgb.inc.glsl
src/xrt/compositor/util/: CMakeLists.txt  comp_high_level_render.c  comp_high_level_render.h  comp_high_level_scratch.c  comp_high_level_scratch.h  comp_render.h  comp_render_cs.c  comp_render_gfx.c  comp_render_helpers.h  comp_scratch.c  comp_scratch.h  comp_vulkan.c  comp_vulkan.h
src/xrt/drivers/: CMakeLists.txt
src/xrt/drivers/android/: android_prober.c  android_sensors.c  android_sensors.h
src/xrt/drivers/contactglove/: contactglove.c  contactglove.h  contactglove_interface.h  contactglove_prober.c  contactglove_protocol.h
src/xrt/drivers/euroc/: euroc_player.cpp
src/xrt/drivers/ht/: ht_driver.c
src/xrt/drivers/ht_ctrl_emu/: ht_ctrl_emu.cpp
src/xrt/drivers/opengloves/: opengloves_interface.h  opengloves_prober.c
src/xrt/drivers/pssense/: pssense_driver.c  pssense_protocol.h
src/xrt/drivers/psvr2/: psvr2.c  psvr2.h  psvr2_protocol.h
src/xrt/drivers/remote/: r_hub.c  r_interface.h
src/xrt/drivers/rift/: rift_driver.c  rift_interface.h  rift_internal.h  rift_usb.c  rift_usb.h
src/xrt/drivers/rift_sensor/: ar0134.h  rift_sensor.c  rift_sensor_interface.h  rift_sensor_internal.h
src/xrt/drivers/solarxr/: feeder.h  protocol.c  protocol.h  solarxr_device.c  solarxr_ipc_message.h  solarxr_ipc_socket.c
src/xrt/drivers/steamvr_lh/: device.cpp  steamvr_lh.cpp
src/xrt/drivers/survive/: survive_driver.c  survive_vp2.c
src/xrt/drivers/uvc/: uvc_driver.c
src/xrt/drivers/vp2/: vp2_config.cpp  vp2_config.h
src/xrt/include/: CMakeLists.txt
src/xrt/include/tracking/: t_constellation.h  t_hand_tracking.h
src/xrt/include/xrt/: CMakeLists.txt  xrt_compiler.h  xrt_compositor.h  xrt_config_build.h.cmake_in  xrt_config_os.h  (+15 more)
src/xrt/ipc/: CMakeLists.txt
src/xrt/targets/: CMakeLists.txt
src/xrt/tracking/: CMakeLists.txt
(+258 files in other folders)
